cluster/apps/media/arrs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app: htpc
  name: htpc
  namespace: media
spec:
  rules:
  - host: media.mark.cloud
    http:
      paths:
      - backend:
          service:
            name: ombi
            port:
              name: webui
        path: /ombi
        pathType: Prefix
      - backend:
          service:
            name: sonarr
            port:
              name: webui
        path: /s
        pathType: Prefix
      - backend:
          service:
            name: radarr
            port:
              name: webui
        path: /r
        pathType: Prefix
      - backend:
          service:
            name: bazarr
            port:
              name: webui
        path: /b
        pathType: Prefix
      - backend:
          service:
            name: prowlarr
            port:
              name: webui
        path: /p
        pathType: Prefix
      - backend:
          service:
            name: deluge
            port:
              name: webui
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - media.mark.cloud
    secretName: media-tls
